--- a/src/app/guia/guia.component.html
+++ b/src/app/guia/guia.component.html
@@ -1,82 +1,108 @@
+<!-- ion-header: Encabezado de la página -->
 <ion-header>
+  <!-- ion-toolbar: Barra de herramientas en el encabezado -->
   <ion-toolbar>
+    <!-- ion-title: Título de la página -->
     <ion-title>
       Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
+<!-- ion-content: Contenido principal de la página -->
 <ion-content class="ion-padding">
+  
+  <!-- Título principal de la sección -->
   <h1 class="header-title">Pasos para el uso de la aplicación</h1>
 
-  
-    <ion-card-header>
-      <h1 class="step-title">Paso 1: Ingreso de Datos</h1>
-    </ion-card-header>
-    <ion-card-content>
-      <h2 class="sub-title"><strong>1. Acceder al Apartado de Datos:</strong></h2>
-      <p>Navegar a la sección de "Datos" en la aplicación.</p>
-      <ion-img src="../../assets/Pasos/Paso 1.png" class="imagenes"></ion-img>
+  <!-- Sección 1: Paso 1 - Ingreso de Datos -->
+  <ion-card-header>
+    <!-- Título de la sección -->
+    <h1 class="step-title">Paso 1: Ingreso de Datos</h1>
+  </ion-card-header>
+  <ion-card-content>
+    <!-- Subtítulo y detalles del paso 1 -->
+    <h2 class="sub-title"><strong>1. Acceder al Apartado de Datos:</strong></h2>
+    <p>Navegar a la sección de "Datos" en la aplicación.</p>
+    <!-- Imagen ilustrativa del paso 1 -->
+    <ion-img src="../../assets/Pasos/Paso 1.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>2. Ingresar Datos de Simulación:</strong></h2>
-      <p>En la pestaña de datos, proporcionar los parámetros necesarios para la simulación:</p>
-      <ul>
-        <li>Ingresar el valor de la media (μ) y desviación estándar (σ) de la inversión inicial.</li>
-        <li>Ingresar el valor de la media (μ) y desviación estándar (σ) del flujo neto.</li>
-        <li>Especificar el porcentaje de retorno mínimo aceptable (TREMA).</li>
-        <li>Presionar el botón "Insertar" para generar el cuadro con valores pesimistas, optimistas y más probables.</li>
-      </ul>
-      <ion-img src="../../assets/Pasos/Paso 1-1.png" class="imagenes"></ion-img>
-    </ion-card-content>
-    
+    <!-- Subtítulo y detalles adicionales del paso 1 -->
+    <h2 class="sub-title"><strong>2. Ingresar Datos de Simulación:</strong></h2>
+    <p>En la pestaña de datos, proporcionar los parámetros necesarios para la simulación:</p>
+    <ul>
+      <li>Ingresar el valor de la media (μ) y desviación estándar (σ) de la inversión inicial.</li>
+      <li>Ingresar el valor de la media (μ) y desviación estándar (σ) del flujo neto.</li>
+      <li>Especificar el porcentaje de retorno mínimo aceptable (TREMA).</li>
+      <li>Presionar el botón "Insertar" para generar el cuadro con valores pesimistas, optimistas y más probables.</li>
+    </ul>
+    <!-- Imagen ilustrativa adicional del paso 1 -->
+    <ion-img src="../../assets/Pasos/Paso 1-1.png" class="imagenes"></ion-img>
+  </ion-card-content>
 
-  
-    <ion-card-header>
-      <h1 class="step-title">Paso 2: Simulación de Datos</h1>
-    </ion-card-header>
-    <ion-card-content>
-      <h2 class="sub-title"><strong>1. Acceder al Apartado de Simulación:</strong></h2>
-      <p>Ir a la sección de "Simulación" en la aplicación.</p>
-      <ion-img src="../../assets/Pasos/Paso 2-1.png" class="imagenes"></ion-img>
+  <!-- Sección 2: Paso 2 - Simulación de Datos -->
+  <ion-card-header>
+    <!-- Título de la sección -->
+    <h1 class="step-title">Paso 2: Simulación de Datos</h1>
+  </ion-card-header>
+  <ion-card-content>
+    <!-- Subtítulo y detalles del paso 2 -->
+    <h2 class="sub-title"><strong>1. Acceder al Apartado de Simulación:</strong></h2>
+    <p>Ir a la sección de "Simulación" en la aplicación.</p>
+    <!-- Imagen ilustrativa del paso 2 -->
+    <ion-img src="../../assets/Pasos/Paso 2-1.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>2. Configurar Parámetros de Simulación:</strong></h2>
-      <p>Ingresar la duración en años para simular inversiones y retornos.</p>
-      <ion-img src="../../assets/Pasos/Paso 2-2.png" class="imagenes"></ion-img>
+    <!-- Subtítulo y detalles adicionales del paso 2 -->
+    <h2 class="sub-title"><strong>2. Configurar Parámetros de Simulación:</strong></h2>
+    <p>Ingresar la duración en años para simular inversiones y retornos.</p>
+    <!-- Imagen ilustrativa adicional del paso 2 -->
+    <ion-img src="../../assets/Pasos/Paso 2-2.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>3. Iniciar Simulación:</strong></h2>
-      <p>Presionar el botón "Simular datos" para ejecutar la simulación.</p>
-      <ion-img src="../../assets/Pasos/Paso 2-3.png" class="imagenes"></ion-img>
+    <!-- Subtítulo y detalles adicionales del paso 2 -->
+    <h2 class="sub-title"><strong>3. Iniciar Simulación:</strong></h2>
+    <p>Presionar el botón "Simular datos" para ejecutar la simulación.</p>
+    <!-- Imagen ilustrativa adicional del paso 2 -->
+    <ion-img src="../../assets/Pasos/Paso 2-3.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>4. Revisar Resultados:</strong></h2>
-      <p>Observar la conclusión de la simulación para determinar la recomendación de inversión.</p>
-      <p>Examinar la tabla de resultados de la simulación y los resultados finales para tomar decisiones informadas.</p>
-      <ion-img src="../../assets/Pasos/paso 2-4.png" class="imagenes"></ion-img>
+    <!-- Subtítulo y detalles adicionales del paso 2 -->
+    <h2 class="sub-title"><strong>4. Revisar Resultados:</strong></h2>
+    <p>Observar la conclusión de la simulación para determinar la recomendación de inversión.</p>
+    <p>Examinar la tabla de resultados de la simulación y los resultados finales para tomar decisiones informadas.</p>
+    <!-- Imagen ilustrativa adicional del paso 2 -->
+    <ion-img src="../../assets/Pasos/paso 2-4.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>5. Exportar Resultados (Opcional):</strong></h2>
-      <p>Si se desea, presionar el botón "Exportar" para descargar los resultados en un archivo PDF.</p>
-      <ion-img src="../../assets/Pasos/paso 2-5.png" class="imagenes"></ion-img>
-    </ion-card-content>
-  
+    <!-- Subtítulo y detalles adicionales del paso 2 -->
+    <h2 class="sub-title"><strong>5. Exportar Resultados (Opcional):</strong></h2>
+    <p>Si se desea, presionar el botón "Exportar" para descargar los resultados en un archivo PDF.</p>
+    <!-- Imagen ilustrativa adicional del paso 2 -->
+    <ion-img src="../../assets/Pasos/paso 2-5.png" class="imagenes"></ion-img>
+  </ion-card-content>
 
+  <!-- Título principal de la sección -->
   <h1 class="header-title">Comenzar un Nuevo Proyecto</h1>
 
-  
-    <ion-card-content>
-      <h2 class="sub-title"><strong>1. Regresar a la Pestaña de Llenado de Datos:</strong></h2>
-      <p>Si se desea iniciar una nueva simulación con datos diferentes, regresar a la pestaña de "Datos".</p>
-      <ion-img src="../../assets/Pasos/Pasos 3-1.png" class="imagenes"></ion-img>
+  <!-- Sección 3: Pasos para iniciar un nuevo proyecto -->
+  <ion-card-content>
+    <!-- Subtítulo y detalles del paso 1 -->
+    <h2 class="sub-title"><strong>1. Regresar a la Pestaña de Llenado de Datos:</strong></h2>
+    <p>Si se desea iniciar una nueva simulación con datos diferentes, regresar a la pestaña de "Datos".</p>
+    <!-- Imagen ilustrativa del paso 1 -->
+    <ion-img src="../../assets/Pasos/Pasos 3-1.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>2. Limpiar Datos Anteriores:</strong></h2>
-      <p>Presionar el botón "Limpiar" para borrar todos los datos ingresados anteriormente.</p>
-      <ion-img src="../../assets/Pasos/Pasos 3-1.png" class="imagenes"></ion-img>
+    <!-- Subtítulo y detalles adicionales del paso 2 -->
+    <h2 class="sub-title"><strong>2. Limpiar Datos Anteriores:</strong></h2>
+    <p>Presionar el botón "Limpiar" para borrar todos los datos ingresados anteriormente.</p>
+    <!-- Imagen ilustrativa adicional del paso 2 -->
+    <ion-img src="../../assets/Pasos/Pasos 3-1.png" class="imagenes"></ion-img>
 
-      <h2 class="sub-title"><strong>3. Repetir Pasos 1 y 2:</strong></h2>
-      <p>Repetir los pasos 1 y 2 para ingresar nuevos datos y ejecutar una nueva simulación.</p>
-    </ion-card-content>
-    <ion-button (click)="volverAlMenu()" expand="block" class="custom-button">
-      <ion-icon slot="start" name="play-outline"></ion-icon>
-  Inicia tu simulación
-    </ion-button>
+    <!-- Subtítulo y detalles adicionales del paso 3 -->
+    <h2 class="sub-title"><strong>3. Repetir Pasos 1 y 2:</strong></h2>
+    <p>Repetir los pasos 1 y 2 para ingresar nuevos datos y ejecutar una nueva simulación.</p>
+  </ion-card-content>
+
+  <!-- Botón para volver al menú principal -->
+  <ion-button (click)="volverAlMenu()" expand="block" class="custom-button">
+    <ion-icon slot="start" name="play-outline"></ion-icon>
+    Inicia tu simulación
+  </ion-button>
 </ion-content>
-
-
