--- a/src/app/simulacion/simulacion.component.html
+++ b/src/app/simulacion/simulacion.component.html
@@ -1,3 +1,4 @@
+<!-- Encabezado -->
 <ion-header>
   <ion-toolbar class="custom-toolbar">
     <ion-title>
@@ -6,11 +7,9 @@
   </ion-toolbar>
 </ion-header>
 
-
+<!-- Contenido de la página -->
 <ion-content>
   <br>
-
-
   <!-- Campo para ingresar la cantidad de años -->
   <ion-item class="custom-item" style="max-width: 90%; margin: 0 auto;">
     <ion-label position="floating" style="color: black;">Ingresar cantidad de años:</ion-label>
@@ -20,13 +19,14 @@
   <!-- Botón para simular datos -->
   <ion-button expand="block" class="blue-button" (click)="simularDatos()">Simular Datos</ion-button>
 
-  <br>
   <!-- Tabla adicional para Valor de Rescate Total, FET Total y TIR -->
-
   <div *ngIf="TIR !== 0" class="tir-container">
     <p class="tir-text">Tasa Interna de Retorno (TIR): {{ TIR }}%</p>
   </div>
-    <table #table1 class="blue-header">
+
+  <!-- Tabla 1 -->
+  <table #table1 class="blue-header">
+    <!-- Encabezado de la tabla -->
     <thead>
       <tr>
         <th>Valor de Rescate Total</th>
@@ -35,6 +35,7 @@
         <th>Estado</th>
       </tr>
     </thead>
+    <!-- Cuerpo de la tabla -->
     <tbody>
       <tr>
         <!-- Mostrar los valores correspondientes -->
@@ -48,45 +49,49 @@
     </tbody>
   </table>
 
-  <!-- Tabla con datos dinámicos -->
-  <div class="table-container" >
-  <table #table2 class="tableprinc beige-header">
-    <thead>
-      <tr>
-        <th>Años</th>
-        <th>Inversión Inicial</th>
-        <th>Flujos Netos</th>
-        <th>FET</th>
-        <th>TASA Impuestos</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let row of tablaData">
-        <!-- Mostrar datos dinámicos -->
-        <td>{{ row.anos }}</td>
-        <td>{{ row.inversionInicial }}</td>
-        <td>{{ row.flujosNetos }}</td>
-        <td>{{ row.fet }}</td>
-        <td>{{ row.tasaImpuestos }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<ion-card-header>
-  <h1 class="step-title" *ngIf="mostrarConclusion">Conclusión de la Simulación</h1>
-</ion-card-header>
-<ion-card-content *ngIf="mostrarConclusion">
-  <p #pdfContent class="conclusion" *ngIf="estadoProyecto === 'Proyecto Aceptado'; else rechazar">
-    <!--<strong>Conclusion:</strong>-->
-    La Tasa Interna de Retorno {{ TIR }}% es más alta que la Tasa de Requerimiento Mínima de Aceptación {{ Trema }}%. Esto significa que el proyecto tiene el potencial de generar más beneficios de los esperados, lo cual es una señal positiva. Por lo tanto, recomendamos aceptar el proyecto debido a que se espera que genere ganancias que superen nuestras expectativas mínimas. Esto sugiere que la inversión será rentable y nos permitirá recuperar nuestro dinero con rendimientos adicionales.
-  </p>
-  <ng-template #rechazar>
-    <p #pdfContent class="conclusion">
-      <!--<strong>Conclusion:</strong>-->
-      La Tasa Interna de Retorno {{ TIR }}% es menor que la Tasa de Requerimiento Mínima de Aceptación {{ Trema }}%. Esto significa que el proyecto no cumple con nuestras expectativas mínimas de rentabilidad. Por lo tanto, No se recomienda invertir en el proyecto, ya que no se espera que genere suficientes beneficios para justificar la inversión. Es mejor buscar otras oportunidades de inversión que ofrezcan rendimientos más atractivos y estén en línea con nuestros objetivos financieros.
-    </p>
-  </ng-template>
-</ion-card-content>
+  <!-- Tabla 2 -->
+  <div class="table-container">
+    <table #table2 class="tableprinc beige-header">
+      <!-- Encabezado de la tabla -->
+      <thead>
+        <tr>
+          <th>Años</th>
+          <th>Inversión Inicial</th>
+          <th>Flujos Netos</th>
+          <th>FET</th>
+          <th>TASA Impuestos</th>
+        </tr>
+      </thead>
+      <!-- Cuerpo de la tabla (datos dinámicos) -->
+      <tbody>
+        <tr *ngFor="let row of tablaData">
+          <!-- Mostrar datos dinámicos -->
+          <td>{{ row.anos }}</td>
+          <td>{{ row.inversionInicial }}</td>
+          <td>{{ row.flujosNetos }}</td>
+          <td>{{ row.fet }}</td>
+          <td>{{ row.tasaImpuestos }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-<ion-button expand="block" class="blue-button" (click)="exportToPDF()">Exportar a PDF</ion-button>
+  <!-- Conclusión de la simulación -->
+  <ion-card-header>
+    <h1 class="step-title" *ngIf="mostrarConclusion">Conclusión de la Simulación</h1>
+  </ion-card-header>
+  <ion-card-content *ngIf="mostrarConclusion">
+    <!-- Mostrar la conclusión según el estado del proyecto -->
+    <p #pdfContent class="conclusion" *ngIf="estadoProyecto === 'Proyecto Aceptado'; else rechazar">
+      La Tasa Interna de Retorno {{ TIR }}% es más alta que la Tasa de Requerimiento Mínima de Aceptación {{ Trema }}%. Esto significa que el proyecto tiene el potencial de generar más beneficios de los esperados, lo cual es una señal positiva. Por lo tanto, recomendamos aceptar el proyecto debido a que se espera que genere ganancias que superen nuestras expectativas mínimas. Esto sugiere que la inversión será rentable y nos permitirá recuperar nuestro dinero con rendimientos adicionales.
+    </p>
+    <ng-template #rechazar>
+      <p #pdfContent class="conclusion">
+        La Tasa Interna de Retorno {{ TIR }}% es menor que la Tasa de Requerimiento Mínima de Aceptación {{ Trema }}%. Esto significa que el proyecto no cumple con nuestras expectativas mínimas de rentabilidad. Por lo tanto, No se recomienda invertir en el proyecto, ya que no se espera que genere suficientes beneficios para justificar la inversión. Es mejor buscar otras oportunidades de inversión que ofrezcan rendimientos más atractivos y estén en línea con nuestros objetivos financieros.
+      </p>
+    </ng-template>
+  </ion-card-content>
+
+  <!-- Botón para exportar a PDF -->
+  <ion-button expand="block" class="blue-button" (click)="exportToPDF()">Exportar a PDF</ion-button>
 </ion-content>
